# essen-sales-agent

./: .gitignore  README.md  TODO.md  pyproject.toml
data/: catalog.csv  price_list.csv  promotions.json
src/: config.py  main.py
src/agents/: catalog_agent.py  coordinator.py  promotions_agent.py  state.py
src/agents/prompts/: catalog_agent.md  coordinator.md  promotions_agent.md
src/agents/tools/: coordinator.py  query_promotions.py  search_catalog.py
tests/: __init__.py  conftest.py  test_config.py  test_data.py  test_tools.py
