[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "essen-sales-agent"
version = "0.1.0"
description = "An interactive sales agent for Essen cookware consultants to create customized sales quotes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-sdk>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-groq>=0.1.6",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
